--- a/src/index.html
+++ b/src/index.html
@@ -5,13 +5,14 @@
   <title>GreenlotsFleet</title>
   <base href="/">
   <meta name=”apple-mobile-web-app-capable” content=”yes”>
-  <meta name="apple-mobile-web-app-status-bar-style" content="translucent">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta content="minimum-scale=1.0, width=device-width, maximum-scale=1, user-scalable=no" name="viewport" />
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="manifest" href="manifest.webmanifest">
   <meta name="theme-color" content="#586d86">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500|Ubuntu:300,400,500&display=swap" rel="stylesheet" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" crossorigin="anonymous">
+  <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
 </head>
 <body>
   <app-root></app-root>
